# agent-workflow-template

./: .gitignore  AGENTS.md  ATTRIBUTION.md  LESSONS.md  NEXT_STEPS.md  README.md  harbor.yml  skill-groups.config
.claude/: settings.local.json
docs/: INSTALL-MACOS.md  INSTALL-UBUNTU.md  INSTALL-WINDOWS.md  SETUP-NEW-REPO.md  TROUBLESHOOTING.md
harbor/: .gitignore  README.md  SMOKE_PHASE2.md  harbor.yml.example  pyproject.toml
harbor/docs/: PHASE1-VALIDATION.md  WINDOWS_TMUX.md
harbor/harbor/: __init__.py  __main__.py  agent.py  beads.py  epic.py  finalize.py  mail.py  orchestrator.py  prompt.py  runner.py  state.py  tmux.py  verify.py
harbor/harbor/webui/: __init__.py  server.py
harbor/harbor/webui/templates/: _status_partial.html  base.html  bead.html  dashboard.html  setup.html
harbor/scripts/: smoke-mock-agent.sh
harbor/tests/: test_agent.py  test_beads.py  test_beads_concurrent.py  test_epic_finalize.py  test_epic_lock.py  test_epic_parallel.py  test_epic_reservation_defer.py  test_epic_sequential.py  test_mail.py  test_orchestrator.py  test_orchestrator_nudge.py  test_prompt.py  test_runner.py  test_scaffold_ships_harbor.py  test_state.py  test_tmux.py  test_verify.py  test_webui.py  test_webui_setup.py
scripts/: bootstrap-agent-config.ps1  bootstrap-agent-config.sh  sync-skills.py
scripts/posix/: bootstrap-new-repo.sh  check-prereqs.sh  install-codex-skills.sh  migrate-downstream-to-bd.sh  migrate-downstream-to-br.sh  scaffold-repo-files.sh  (+6 more)
templates/: AGENTS.snippet.md  BEADS_WORKFLOW.md  CLAUDE.snippet.md  NEW_REPO_CHECKLIST.md  PRIME.md
(+83 files in other folders)
