[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor"
version = "0.1.0dev"
description = "Python/tmux/webview runner that replaces session-as-coordinator for beads-driven epic execution."
requires-python = ">=3.10"
authors = [{ name = "agent-workflow-template" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
harbor = "harbor.__main__:main"
harbor-bead-runner = "harbor.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harbor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
